samples/_failures_safe/1761441083_2b0334_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec1337b6.c: In function ‘process_event’:
./samples/SAFE/__tmp_ec1337b6.c:180:16: error: expected ‘:’ at end of input
  180 |         default
      |                ^
      |                :
./samples/SAFE/__tmp_ec1337b6.c:180:9: error: expected declaration or statement at end of input
  180 |         default
      |         ^~~~~~~
./samples/SAFE/__tmp_ec1337b6.c:180:9: error: expected declaration or statement at end of input
